--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^2.6.5",
     "gh-pages": "^2.0.1",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.14",
     "popper.js": "^1.15.0",
     "vue": "^2.6.10"
   },
