--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
+    "element-ui": "^2.12.0",
     "gh-pages": "^2.0.1",
     "jquery": "^3.4.1",
     "lodash": "^4.17.14",
