--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "lint": "vue-cli-service lint",
     "deploy": "gh-pages -d dist"
   },
-  "homepage": "https://jarhun88.github.io/TravelSPA",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
@@ -19,7 +18,8 @@
     "popper.js": "^1.15.0",
     "vue": "^2.6.10",
     "vue-lazyload": "^1.3.3",
-    "vue2-google-maps": "^0.10.7"
+    "vue2-google-maps": "^0.10.7",
+    "vuetify": "^2.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.2",
@@ -28,7 +28,11 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.2.3",
-    "vue-template-compiler": "^2.6.10"
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "^2.0.2",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
     "root": true,
@@ -52,5 +56,6 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "homepage": "https://jarhun88.github.io/TravelSPA"
 }
