--- a/package.json
+++ b/package.json
@@ -9,30 +9,33 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "core-js": "^2.6.5",
-    "element-ui": "^2.12.0",
-    "gh-pages": "^2.0.1",
+    "bootstrap": "^4.4.1",
+    "core-js": "^3.6.1",
+    "element-ui": "^2.13.0",
+    "gh-pages": "^2.1.1",
     "jquery": "^3.4.1",
-    "lodash": "^4.17.14",
-    "popper.js": "^1.15.0",
-    "vue": "^2.6.10",
+    "lodash": "^4.17.15",
+    "popper.js": "^1.16.0",
+    "vue": "^2.6.11",
+    "vue-js-modal": "^1.3.31",
     "vue-lazyload": "^1.3.3",
     "vue2-google-maps": "^0.10.7",
-    "vuetify": "^2.1.0"
+    "vuetify": "^2.2.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.9.2",
-    "@vue/cli-plugin-eslint": "^3.9.2",
-    "@vue/cli-service": "^4.1.1",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.2.3",
-    "sass": "^1.19.0",
+    "@vue/cli-plugin-babel": "^4.1.2",
+    "@vue/cli-plugin-eslint": "^4.1.2",
+    "@vue/cli-service": "^4.1.2",
+    "babel-eslint": "^10.0.3",
+    "deepmerge": "^4.2.2",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^6.1.2",
+    "fibers": "^4.0.2",
+    "sass": "^1.24.0",
     "sass-loader": "^8.0.0",
-    "vue-cli-plugin-vuetify": "^2.0.2",
-    "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.3.0"
+    "vue-cli-plugin-vuetify": "^2.0.3",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.4.3"
   },
   "eslintConfig": {
     "root": true,
